Fixed grammar & spelling errors

--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@
                   <div class="bar"></div>
                   <div class="text" style="text-align:left">
                     <ul>
+                      <li>Currently working on a website using Bootstrap, HTML, CSS and JS</li>
                       <li>Worked on a machine learning project using Python, TensorFlow and Keras to analyze circuit
                         boards</li>
                       <li>Created a test suite using Java, HTML, CSS, JS, JUnit and REST APIs (front-end and back-end)
@@ -475,11 +476,11 @@
                   <div class="bar"></div>
                   <div class="text">
                     <ul>
-                      <li> Provided excellent customer service to a diverse clientele in-person and via phone
+                      <li>Provided excellent customer service to a diverse clientele in-person and via phone
                       </li>
-                      <li>Managed conference and meeting room bookings internally
+                      <li>Managed conference and meeting room bookings
                       </li>
-                      <li>Planned, organize, and execute large and small scale events throughout the year</li>
+                      <li>Planned, organized, and executed large and small scale events throughout the year</li>
                     </ul>
                   </div>
                 </div>
@@ -496,12 +497,11 @@
                   <div class="bar"></div>
                   <div class="text">
                     <ul>
-                      <li> Posted local events from the San Diego area to the website
+                      <li>Posted local events occuring in the San Diego area to the website
                       </li>
-                      <li>Created the Image Resizer for KPBS for shrinking several photos to the appropriate size at
-                        once
+                      <li>Created the Image Resizer for KPBS for shrinking several photos to the appropriate size
                       </li>
-                      <li>Created a Google Chrome extension for common HTML tags that KPBS uses on their website</li>
+                      <li>Created a Google Chrome extension for common HTML tags that KPBS used for their website</li>
                     </ul>
                   </div>
                 </div>
@@ -518,12 +518,12 @@
                   <div class="bar"></div>
                   <div class="text">
                     <ul>
-                      <li> Assisted in design of course material, construct tests, grade assignments, and teach during
+                      <li> Assisted in designing course material and grading assignments, and taught during
                         after-hour sessions for 150+ students
                       </li>
                       <li>Worked with students one-on-one during lab meetings and office hours
                       </li>
-                      <li>Reinforced lessons presented by professor through review material and study workshops</li>
+                      <li>Reinforced lessons presented by professor through review materials and study workshops</li>
                     </ul>
                   </div>
                 </div>
