Added more to personal site

--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
           ABOUT
         </div>
         <div class="header-bar waypoint" data-animation="slide-in-left" data-delay=".5s"></div>
+        <div style="transform:translateY(-90px)">
+          <div class="header waypoint" data-animation="slide-in-left" style="font-size:20px;">
+            "When in doubt, <b><i>code</i></b> it out"
+          </div>
+        </div>
 
         <div class="flex row label-wrap">
           <div class="flex row-gt-sm">
@@ -512,7 +517,7 @@
               <div class="blog-wrap waypoint" data-animation="fade-in">
                 <div class="fade-wrap">
                   <div class="thumb" id="thumb-3"></div>
-                  <div class="label bold">SDSU</div>
+                  <div class="label bold">San Diego State University</div>
                   <div class="date">Teaching Assistant - Computer Science 320</div>
                   <div class="date">Sep 2018 - Dec 2018</div>
                   <div class="bar"></div>
@@ -532,6 +537,185 @@
 
           </div>
         </div>
+
+        <div class="flex row wrap" style="transform:translateY(200px)">
+          <div style=" font-size:20px;"><b><u>EDUCATION</u></b></div>
+        </div>
+
+        <div class="flex row wrap" style="transform:translateY(220px)">
+          <div class="flex row-gt-sm">
+            <a href="https://cs.sdsu.edu/" target="_blank">
+              <div class="blog-wrap waypoint" data-animation="fade-in">
+                <div class="fade-wrap">
+                  <div class="thumb" id="thumb-3"></div>
+                  <div class="label bold">San Diego State University</div>
+                  <div class="date">Fall 2016 - Fall 2020</div>
+                  <div class="bar"></div>
+                  <div class="text" style="text-align:left">
+                    <ul>
+                      <li>Major: Computer Science</li>
+                      <li>Minor: Marketing</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="https://lavincenter.sdsu.edu/" target="_blank">
+              <div class="blog-wrap waypoint" data-animation="fade-in">
+                <div class="fade-wrap">
+                  <div class="thumb" id="thumb-6"></div>
+                  <div class="label bold">Lavin Entrepreneurship Program</div>
+                  <div class="date">Spring 2018 - Spring 2020</div>
+                  <div class="bar"></div>
+                  <div class="text" style="text-align:left">
+                    <ul>
+                      <li>
+                        Two year co-curricular program organized around a "Lean" framework that advocates dynamic
+                        business modeling based on "out of the building" assumptions testing.</li>
+
+                      <li>Key elements covered: value proposition, target market segments, customer
+                        relationship building, key resource requirements, key activities, key partners, distribution
+                        channels, cost structure and revenue streams.</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="https://ziplaunchpad.sdsu.edu/" target="_blank">
+              <div class="blog-wrap waypoint" data-animation="fade-in">
+                <div class="fade-wrap">
+                  <div class="thumb" id="thumb-5"></div>
+                  <div class="label bold">Zahn Innovation Platform</div>
+                  <div class="date">E-Track and Launch 1</div>
+                  <div class="date">Fall 2017 - Spring 2019</div>
+                  <div class="bar"></div>
+                  <div class="text" style="text-align:left">
+                    <ul>
+                      <li>
+                        Co-Founded the startup Helix through the Zahn Innovation Platform at San Diego State University
+                      </li>
+                      <li> The goal of Helix was to build a new wearable device that measures blood pressure passively
+                        throughout the day for patients who suffer from hypertension. This is done by using a single
+                        lead
+                        ecg sensor with proprietary hardware & software integration that transfers the data over
+                        Bluetooth
+                        to the user's phone</li>
+                      <li>Filed three provisional patents and acquired FDA 510k clearance with a working prototype</li>
+                      <li> Experienced the research, knowledge, and work that go into the process of building a
+                        business
+                        from
+                        the ground up</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+
+
+          </div>
+        </div>
+
+        <div class="flex row wrap">
+          <div class="flex row-gt-sm">
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          </div>
+        </div>
+
+
+        <!-- HOBBIES 
+        <div class="flex row wrap" style="transform:translateY(200px)">
+          <div style=" font-size:20px;"><b><u>HOBBIES</u></b></div>
+        </div>
+
+        <div class="flex row wrap" style="transform:translateY(220px)">
+          <div class="flex row-gt-sm">
+            <a href="https://cs.sdsu.edu/" target="_blank">
+              <div class="blog-wrap waypoint" data-animation="fade-in">
+                <div class="fade-wrap">
+                  <div class="thumb" id="thumb-7"></div>
+                  <div class="label bold">Running Club at SDSU</div>
+                  <div class="date">Director of Gear and Apparel
+                  </div>
+
+                  <div class="date">Fall 2016 - Fall 2020</div>
+                  <div class="bar"></div>
+                  <div class="text" style="text-align:left">
+                    <ul>
+                      <li>Created a shop at the beginning of each semester with Running Club gear and apparel</li>
+                      <li>Helped create and updated the club website (https://runningclub.sdsu.edu/)</li>
+                      <li>Ran with the club 3-5 days a week</li>
+                      <li>Competed in track meets, 5k and 10k races and half marathons</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="https://lavincenter.sdsu.edu/" target="_blank">
+              <div class="blog-wrap waypoint" data-animation="fade-in">
+                <div class="fade-wrap">
+                  <div class="thumb" id="thumb-6"></div>
+                  <div class="label bold">Lavin Entrepreneurship Program</div>
+                  <div class="date">Spring 2018 - Spring 2020</div>
+                  <div class="bar"></div>
+                  <div class="text" style="text-align:left">
+                    <ul>
+                      <li>
+                        Two year co-curricular program organized around a "Lean" framework that advocates dynamic
+                        business modeling based on "out of the building" assumptions testing.</li>
+
+                      <li>Key elements covered: value proposition, target market segments, customer
+                        relationship building, key resource requirements, key activities, key partners, distribution
+                        channels, cost structure and revenue streams.</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="https://ziplaunchpad.sdsu.edu/" target="_blank">
+              <div class="blog-wrap waypoint" data-animation="fade-in">
+                <div class="fade-wrap">
+                  <div class="thumb" id="thumb-5"></div>
+                  <div class="label bold">Zahn Innovation Platform</div>
+                  <div class="date">E-Track and Launch 1</div>
+                  <div class="date">Fall 2017 - Spring 2019</div>
+                  <div class="bar"></div>
+                  <div class="text" style="text-align:left">
+                    <ul>
+                      <li>
+                        Co-Founded the startup Helix through the Zahn Innovation Platform at San Diego State University
+                      </li>
+                      <li> The goal of Helix was to build a new wearable device that measures blood pressure passively
+                        throughout the day for patients who suffer from hypertension. This is done by using a single
+                        lead
+                        ecg sensor with proprietary hardware & software integration that transfers the data over
+                        Bluetooth
+                        to the user's phone</li>
+                      <li>Filed three provisional patents and acquired FDA 510k clearance with a working prototype</li>
+                      <li> Experienced the research, knowledge, and work that go into the process of building a
+                        business
+                        from
+                        the ground up</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+
+
+          </div>
+        </div>
+
+        <div class="flex row wrap">
+          <div class="flex row-gt-sm">
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          </div>
+        </div>-->
       </div>
     </section>
 
